# gemini-cli

./: .gitignore  .prettierignore  eslint.config.js  package-lock.json  package.json
.github/workflows/: ci.yml  community-report.yml  gemini-automated-issue-triage.yml  gemini-scheduled-issue-triage.yml  gemini-scheduled-pr-triage.yml  release.yml
docs/: memory-extension.md
gca_extension/: README.md  gemini-extension-gca.json  gemini-extension.json  index-gca.js  index.js  index.ts  package-lock.json  package.json  test-memory-enhancer.js
gca_extension/python/: pyproject.toml
gca_extension/python/src/gca_memory_simulator/: gradio_app.py  test.py
gca_extension/python/src/gca_memory_simulator/resources/: memory_conf.py
gca_extension/python/src/gca_memory_simulator/resources/configs/: memory.yaml  memory_prompts.yaml
integration-tests/: hooks-system.test.ts  list_directory.test.js  memory-extension.test.js  test-helper.ts
